feat: add healthcheck endpoint
